# LibDAQDevice

./: CMakeLists.txt  LibDAQ.sln  README.md
CSharpTest/: DAQDevice.cs  Program.cs
CSharpTest/Classes/: Cooler.cs  HVPSU.cs  MeasurementModes.cs  PSoCCommunicator.cs  SerialPortHandler.cs  TemperaturesArray.cs
drivers/: CMakeLists.txt
drivers/include/: TVP7002.h  calibration_module.h  i2c_driver.h  memory_access.h  root_writer.h  sipm_daq_pair_driver.h
drivers/source/: TVP7002.cpp  calibration_module.cpp  i2c_driver.cpp  memory_access.cpp  root_writer.cpp  sipm_daq_pair_driver.cpp
include/: DAQCommon.h  DAQDevice.h  DAQMeasurementSettings.h  Enums.h
source/: DAQ.cpp  DAQCommon.cpp  DAQDevice.cpp
